# hello-cmake

./: CMakeLists.txt  hello Cmake.cpp  hello Cmake.h
